Added gproc parse transform, need to consider some stuff

--- a/rebar.config
+++ b/rebar.config
@@ -1,2 +1,7 @@
 {cover_enabled, true}.
 {eunit_opts, [verbose, {report,{eunit_surefire,[{dir,"."}]}}]}.
+
+{deps, [
+    {meck, ".*",
+        {git, "https://github.com/eproxus/meck.git", "HEAD"}}
+]}.
